[ENG-9837], [ENG-9081] Links contrast issues (#824)
- Ticket: [ENG-9837], [ENG-9081]
- Feature flag: n/a

## Summary of Changes
1. Changed profile links color.
2. Changed preprints, institutions links color.

--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -145,6 +145,10 @@
   color: var(--dark-blue-1);
 }
 
+.dark-blue-two-link {
+  color: var(--dark-blue-2);
+}
+
 .provider-description {
   a:hover {
     color: var(--branding-primary-color);
